# B2

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  data-model.md  index-engine.md  justfile  notes.md  rust-toolchain.toml  tasks.md  user-stories.md  vision-and-scope.md
crates/b2-cli/: Cargo.toml
crates/b2-cli/src/: main.rs
crates/b2-cli/tests/: cli.rs
crates/b2-core/: Cargo.toml
crates/b2-core/src/: add.rs  chunk.rs  db.rs  dirs.rs  discover.rs  embed.rs  error.rs  event.rs  graph.rs  id.rs  ingest.rs  lib.rs  link.rs  mv.rs  note.rs  pathspec.rs  relate.rs  relation.rs  replay.rs  resource.rs  rm.rs  search.rs  suggest.rs  vault.rs
crates/b2-core/tests/: accept.rs  add.rs  cancel.rs  chunks.rs  dirs.rs  discover.rs  discover_query_count.rs  dry_run.rs  embed.rs  explain.rs  frontmatter.rs  generate.rs  graph.rs  ingest_resolver.rs  links.rs  list.rs  logging.rs  mv.rs  project_embed.rs  props.rs  read.rs  relate.rs  resources.rs  rm_delete.rs  roundtrip.rs  search.rs  stamp.rs  substrate.rs  suggestions.rs  vault.rs  vector_pool_scale.rs  write.rs  write_frontmatter.rs
crates/b2-core/tests/common/: mod.rs
crates/b2-desktop/: CLAUDE.md  Cargo.toml  tauri.conf.json
crates/b2-desktop/capabilities/: default.json
crates/b2-desktop/icons/: icon.icns
crates/b2-desktop/src/: commands.rs  error.rs  logging.rs  main.rs  stats.rs  watch.rs
crates/b2-embed/: Cargo.toml
crates/b2-embed/evals/: queries.json  similar.json
crates/b2-embed/evals/corpus/: backpacking-gear.md  bicycle.md  bike-maintenance.md  coffee-roasting.md  dreaming.md  earthquakes.md  encryption.md  espresso.md  fermentation.md  french-press.md  glaciers.md  houseplant-care.md  insomnia.md  passwords.md  personal-finance.md  phishing.md  photosynthesis.md  plant-roots.md  sleep-hygiene.md  volcano.md
crates/b2-embed/examples/: eval.rs
crates/b2-embed/src/: config.rs  lib.rs  model.rs  provision.rs
crates/b2-embed/tests/: batch.rs
crates/b2-relate/: Cargo.toml
crates/b2-relate/evals/: pairs.json
crates/b2-relate/evals/corpus/: caffeine-half-life.md  channeling.md  coffee-brewing.md  cold-brew.md  crema.md  diet-heart-hypothesis.md  espresso.md  evergreen-notes.md  grind-size.md  http1.md  http2.md  insomnia.md  mediterranean-trial.md  my-vault-setup.md  saturated-fat-reappraisal.md  sleep-hygiene.md  volcano.md  zettelkasten.md
crates/b2-relate/examples/: suggest-eval.rs
crates/b2-relate/src/: claude.rs  config.rs  lib.rs  prompt.rs
docs/: architecture.html  discovery.html  index.html  indexing.html  quickstart.html  test-harness-tour.html
docs/design/: data-model.md  index-engine.md  invariants.md
fixtures/: README.md
fixtures/golden-vault/concepts/: memory.md
fixtures/golden-vault/notes/: spaced-repetition.md
fixtures/golden-vault/resources/: clipping.html  data.txt
fixtures/test-vault/coffee/: 008-extraction-yield.md  018-freshness-and-degassing.md  028-the-pour-over.md  038-single-origin-beans.md  048-the-espresso-shot.md  058-brew-ratio.md  068-the-bloom.md  078-water-temperature.md  088-brew-ratio.md  098-freshness-and-degassing.md  108-extraction-yield.md  118-extraction-yield.md  128-extraction-yield.md  138-the-espresso-shot.md  148-single-origin-beans.md  158-freshness-and-degassing.md  168-brew-ratio.md  178-the-espresso-shot.md  188-brew-ratio.md  198-the-pour-over.md
fixtures/test-vault/databases/: 005-sqlite-as-a-library.md  015-connection-pooling.md  025-vacuuming.md  035-schema-migrations.md  045-connection-pooling.md  055-sqlite-as-a-library.md  065-vacuuming.md  075-acid-transactions.md  085-connection-pooling.md  095-denormalization.md  105-sqlite-as-a-library.md  115-vacuuming.md  125-acid-transactions.md  135-connection-pooling.md  145-the-write-ahead-log.md  155-connection-pooling.md  165-schema-migrations.md  175-query-planning.md  185-schema-migrations.md  195-denormalization.md
fixtures/test-vault/distributed-systems/: 001-consensus-under-partition.md  011-leader-election.md  021-backpressure.md  031-the-cap-tradeoff.md  041-leader-election.md  051-leader-election.md  061-quorum-reads.md  071-consensus-under-partition.md  081-retries-and-jitter.md  091-retries-and-jitter.md  101-consensus-under-partition.md  111-idempotent-writes.md  121-consensus-under-partition.md  131-the-two-generals.md  141-consensus-under-partition.md  151-retries-and-jitter.md  161-idempotent-writes.md  171-retries-and-jitter.md  181-retries-and-jitter.md  191-retries-and-jitter.md
fixtures/test-vault/gardening/: 007-soil-ph.md  017-attracting-pollinators.md  027-mulching.md  037-drip-irrigation.md  047-overwintering.md  057-drip-irrigation.md  067-overwintering.md  077-mulching.md  087-drip-irrigation.md  097-companion-planting.md  107-overwintering.md  117-mulching.md  127-soil-ph.md  137-crop-rotation.md  147-companion-planting.md  157-composting-basics.md  167-soil-ph.md  177-mulching.md  187-mulching.md  197-raised-beds.md
fixtures/test-vault/hiking/: 009-elevation-gain.md  019-reading-the-weather.md  029-trail-etiquette.md  039-layering-systems.md  049-water-treatment.md  059-switchbacks.md  069-reading-the-weather.md  079-trail-etiquette.md  089-switchbacks.md  (+11 more)
planning/: data-model.md  index-engine.md  invariants.md  tasks.md  user-stories.md  vision-and-scope.md
planning/research/: discovery-scan-strategy.md  file-type-support.md  vector-store-alternatives.md
planning/specs/: async-indexing.md  desktop-editing.md  desktop-live-preview.md  desktop-ui-mvp.md  eval-strategy.md  index-engine-build.md  projection-embedding-split.md  qmd-chunker.md  resources-inventory-graph.md
scripts/: compare-embed-device.sh  doctor.sh
ui/: index.html  package-lock.json  package.json  style.css  tsconfig.json  vite.config.ts
ui/src/: api.ts  embedreminder.test.ts  embedreminder.ts  findbar.test.ts  findbar.ts  format.test.ts  format.ts  graph.test.ts  graph.ts  livepreview.ts  main.ts  move.test.ts  move.ts  newentry.test.ts  newentry.ts  panes.test.ts  panes.ts  reconcile.test.ts  reconcile.ts  render.ts  state.ts  types.ts  wikicomplete.test.ts  wikicomplete.ts
(+107 files in other folders)
