[package]
name = "b2-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
description = "B2 CLI — the first dumb adapter over the b2-core typed API (headless-first)"

[[bin]]
name = "b2"
path = "src/main.rs"

[dependencies]
b2-core = { path = "../b2-core" }
b2-embed = { path = "../b2-embed" }
clap = { version = "4.6.1", features = ["derive", "env"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
# The opt-in structured-log sink (B2_LOG/B2_DEBUG): the kernel's tracing events —
# per-query SQLite timings, façade-op spans — rendered as JSON Lines on stderr.
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }

[dev-dependencies]
tempfile = "3.27.0"
