[package]
name = "b2-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.96"  # libsqlite3-sys 0.38 build.rs uses the cfg_select! macro (stable since 1.95)
description = "B2 index engine — the SQLite-backed disposable projection of (Markdown ∪ log)"

[dependencies]
rusqlite = { version = "0.40.1", features = ["bundled"] }
sqlite-vec = "0.1.9"

[dev-dependencies]
tempfile = "3.27.0"
