[package]
name = "b2-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.96"  # libsqlite3-sys 0.38 build.rs uses the cfg_select! macro (stable since 1.95)
description = "B2 index engine — the SQLite-backed disposable projection of (Markdown ∪ log)"

[dependencies]
blake3 = "1.8.5"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlite-vec = "0.1.9"
thiserror = "2.0.18"
ulid = "1.2.1"
yaml-rust2 = "0.11.0"

[dev-dependencies]
tempfile = "3.27.0"
