[package]
name = "b2-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.96"  # libsqlite3-sys 0.38 build.rs uses the cfg_select! macro (stable since 1.95)
description = "B2 index engine — the SQLite-backed disposable projection of (Markdown ∪ log)"

[dependencies]
blake3 = "1.8.5"
# "trace" exposes SQLite's own sqlite3_trace_v2 profiler — per-statement SQL +
# execution time, the source of the `b2::sqlite` query-timing events (db.rs).
rusqlite = { version = "0.40.1", features = ["bundled", "trace"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
# Structured debug logging (facade only — emitting events costs nothing until an
# adapter installs a subscriber; the CLI's is opt-in via B2_LOG/B2_DEBUG).
tracing = "0.1.41"
ulid = "1.2.1"
yaml-rust2 = "0.11.0"

[dev-dependencies]
tempfile = "3.27.0"
# The logging integration test installs a real JSON subscriber to assert the
# emitted events are parseable, plottable JSONL (tests/logging.rs).
tracing-subscriber = { version = "0.3.20", features = ["json"] }
