[package]
name = "b2-desktop"
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
description = "B2 desktop app — the Tauri host, a dumb adapter over the b2-core Vault façade (the GUI sibling of b2-cli)"

# The dependency arrow points *one way*: this crate depends on b2-core (+ b2-embed);
# the core never learns about Tauri or the UI (crates/b2-desktop/CLAUDE.md). So the
# fast core suite (`cargo test -p b2-core`) never compiles Tauri/webview deps — the
# same discipline that keeps b2-embed's candle deps out of the core.

[[bin]]
name = "b2-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
b2-core = { path = "../b2-core" }
b2-embed = { path = "../b2-embed" }
tauri = { version = "2", features = [] }
# Native folder picker for the in-app vault switcher. Used host-side only (the
# `choose_vault` command calls it in Rust); the webview is granted no dialog
# permission, so it can't open a dialog itself (least-privilege, capabilities/default.json).
tauri-plugin-dialog = "2"
# "Open in system default" on the resource fallback card (file-type slice 1, spec §6):
# an OS handoff, never in-webview execution. Same least-privilege posture as the
# dialog — the host-side `open_resource` command calls it in Rust after validating
# the path against the inventory; the webview is granted no opener permission.
tauri-plugin-opener = "2"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
# Platform data dir for the "last opened vault" state file, so the app reopens the
# vault that was open when it was last closed. Same crate/convention b2-embed uses for
# its XDG model cache (`dirs::data_dir()/b2/…`), so both live under one vendor dir.
dirs = "6"
# Native filesystem watch for auto-reload on external edits (#14 / crates/b2-desktop/CLAUDE.md).
# Host-owned infrastructure: the watcher coalesces raw OS events into one debounced
# `vault-changed` pulse to the webview, which reconciles via existing façade ops — the
# webview itself is granted no filesystem permission (least-privilege, capabilities/).
notify = "8"
# Opt-in structured-log sink (B2_LOG/B2_DEBUG/B2_LOG_FILE), the GUI mirror of the CLI's
# — same JSONL shape (see src/logging.rs). `tracing-appender` adds the non-blocking
# writer this long-lived, multi-threaded host needs (the CLI's Mutex<File> is fine for a
# one-shot process; here it would block GUI/reindex threads on log I/O).
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
tracing-appender = "0.2"
serde_json = "1.0.150"

# Research build (GH #40, macOS-only): forward the Metal GPU embedder feature to b2-embed so
# `cargo tauri dev --features metal` (or `just app-metal`) embeds on the GPU. Default is CPU.
[features]
metal = ["b2-embed/metal"]

[dev-dependencies]
tempfile = "3.27.0"
# Test-only: exercise the `CmdError` → webview serialization boundary the way Tauri
# does (already in the tree via b2-core, so no new build cost).
serde_json = "1.0.150"
