[package]
name = "b2-embed"
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
description = "B2's real local embedder — candle-backed inference behind the b2-core Embedder seam"

# Heavy ML deps (candle + tokenizers) live *only* here, never in b2-core, so the
# core test suite stays fast, deterministic, and model-free (tasks.md testability
# points 4–5). The `b2` binary depends on this crate to inject the real model.

[dependencies]
b2-core = { path = "../b2-core" }
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
hf-hub = { version = "0.4", features = ["ureq"] }
tokenizers = "0.21"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "0.8"
dirs = "6.0"
thiserror = "2.0.18"

# On macOS, link Apple's Accelerate (vDSP/BLAS) for candle's CPU matmuls. Without
# it candle falls back to a naive kernel that makes bge-base inference ~10-100×
# slower — the real bottleneck behind a slow `b2 reindex`, far more than batching.
# Cargo merges these features with the base deps above; on non-macOS the feature is
# simply absent (candle stays portable), so a Linux build is unaffected.
[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.9", features = ["accelerate"] }
candle-nn = { version = "0.9", features = ["accelerate"] }
candle-transformers = { version = "0.9", features = ["accelerate"] }

# Research lever (GH #40): run the BERT forward pass on the Apple-Silicon Metal GPU instead
# of the CPU. `metal` is *additive* over `accelerate` (independent code paths — CPU mode still
# gets Accelerate BLAS, Metal mode uses the GPU), and the device is chosen at load via candle's
# `metal_is_available()` (== `cfg!(feature = "metal")`) with a graceful CPU fallback — see
# `model.rs::select_device`. Switching device is a *model swap* (the recorded model id gains an
# `@metal` tag), so a re-embed is forced and `search` fails fast rather than mixing vectors.
# **macOS-only:** the candle metal-kernels crate builds only on macOS; don't pass `--features
# metal` on Linux. Enable per-build: `cargo run -p b2-cli --features metal -- reindex`.
[features]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]

[dev-dependencies]
tempfile = "3.27.0"
